# cookiecutter_cmake

./: README.md  cookiecutter.json
{{cookiecutter.Project_Name}}/: CMakeLists.txt  Readme.md
{{cookiecutter.Project_Name}}/lib/: CMakeLists.txt
{{cookiecutter.Project_Name}}/test/: CMakeLists.txt  test.cpp
{{cookiecutter.Project_Name}}/{{cookiecutter.Project_Name}}/: CMakeLists.txt  hello.cpp  hello.h  main.cpp
