set (Project "test_{{cookiecutter.Project_Name}}")
enable_testing()
find_package(GTest REQUIRED)
set (SOURCE test.cpp ${CMAKE_SOURCE_DIR}/{{cookiecutter.Project_Name}}/hello.cpp )
set (HEADER ${CMAKE_SOURCE_DIR}/{{cookiecutter.Project_Name}}/hello.h)
include(GoogleTest)
add_executable(${Project} ${SOURCE} ${HEADER})
target_include_directories(${Project} PUBLIC ${CMAKE_SOURCE_DIR}/{{cookiecutter.Project_Name}}/)
target_link_libraries(${Project} GTest::gtest_main)
gtest_discover_tests(${Project})
